<resources>
    <string name="app_name">Comikku</string>
    <string name="title_activity_main" translatable="false">Comikku</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Info</string>
    <string name="action_save">Save</string>
    <string name="action_data_options">Data</string>
    <string name="action_comics_delete">Remove</string>
    <string name="action_comics_sort_by_name">Sort by name</string>
    <string name="action_comics_sort_by_release">Sort by release</string>
    <string name="action_comics_edit">Edit</string>
    <string name="action_comics_share">Share</string>
    <string name="action_comics_search">Search</string>
    <string name="action_comics_sync">Start sync</string>
    <string name="action_release_delete">Remove</string>
    <string name="action_release_shopping">Shopping list</string>
    <string name="action_release_calendar">Calendar</string>
    <string name="action_release_wishlist">Wishlist</string>
    <string name="action_release_share">Share</string>
    <string name="action_release_ordered">Ordered</string>
    <string name="title_activity_comics_new">New comics</string>
    <string name="title_activity_comics_edit">Edit comics</string>
    <string name="title_activity_release_editor">New release</string>
    <string name="title_activity_comics_detail">Comics detail</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_data_options">Data</string>
    <string name="title_activity_synccode_scanner">Scan sync code</string>
    <string name="share">Share</string>
    <string name="selected_item">%1d</string>
    <string name="selected_items">%1d</string>
    <string name="placeholder_wishlist" translatable="false">wish</string>
    <string name="undo">Undo</string>
    <string name="comics_removed">Comics removed</string>
    <string name="release_removed">Release removed</string>
    <string name="also_releases">Also: %1s</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="comics_empty_list">You have no comics</string>
    <string name="release_empty_list">You have no releases</string>
    <string name="format_comics_date">EEE, MMM dd</string>
    <string name="format_release_date">EEE, MMM dd</string>
    <string name="format_release_longdate">EEEE, MMMM dd, yyyy</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_reminder">Reminder</string>
    <string name="pref_group_by_month_title">Group releases by month</string>
    <string name="pref_group_by_month_on">The releases are grouped by month</string>
    <string name="pref_group_by_month_off">The releases are grouped by week</string>
    <string name="pref_week_start_on_monday_title">Week start on monday</string>
    <string name="pref_week_start_on_monday_on">Monday is the first day of week</string>
    <string name="pref_week_start_on_monday_off">Sunday is the first day of week</string>
    <string name="pref_last_purchased_title">Show last release purchased</string>
    <string name="pref_last_purchased_on">The last number purchased is shown in the list comics</string>
    <string name="pref_last_purchased_off">The next issue that must be purchased is shown in the comics list</string>
    <string name="pref_autofill_release_title">Automatically fill release data</string>
    <string name="pref_autofill_release_on">The fields of the new release will be automatically set according to the previous release</string>
    <string name="pref_autofill_release_off">The fields of the new release will be empty</string>
    <string name="pref_reminder_title">Enable release reminder</string>
    <string name="pref_reminder_time_title">Reminder time</string>
    <string name="pref_reminder_time_summary">%1$02d:%2$02d</string>
    <string name="pref_reminder_time_summary_day_before">%1$02d:%2$02d of the day before</string>
    <string name="pref_reminder_time_day_before">Remind me the day before</string>
    <string name="opt_backup_now_title">Create bakcup</string>
    <string name="opt_backup_now_confirm_title">Create bakcup?</string>
    <string name="opt_backup_now_confirm_message">The backup file will be created in Downloads folder. The previous backup will be overwritten.</string>
    <string name="opt_backup_now_confirm_ok">Create now</string>
    <string name="opt_backup_now_done">Backup created</string>
    <string name="opt_backup_now_fail">There was a problem with backup</string>
    <string name="opt_backup_now_wait">Backup data to file&#8230;</string>
    <string name="opt_permissions_explanation">You won\'t be able to save and read backup data without giving access to your device\'s sotrage. Do you want to change your settings?</string>
    <string name="opt_permissions_need_title">Need access to storage</string>
    <string name="opt_permissions_need_message">You can always change your permissions by going to Settings / Apps / Comikku / Persmissions</string>
    <string name="opt_restore_now_title">Restore bakcup</string>
    <string name="opt_restore_now_confirm_title">Restore bakcup?</string>
    <string name="opt_restore_now_confirm_message">Current data will be removed and restored from backup file.</string>
    <string name="opt_restore_now_confirm_ok">Restore now</string>
    <string name="opt_restore_now_done">Backup restored</string>
    <string name="opt_restore_now_fail">There was a problem with restore</string>
    <string name="last_restored">Last backup was on %1$tB %1$te, %1$tY at %1$tl:%1$tM %1$tp</string>
    <string name="opt_restore_now_wait">Restore data from file&#8230;</string>
    <string name="opt_restore_old_title">Restore data from old version of Comikku app</string>
    <string name="opt_restore_old_confirm_title">Restore data?</string>
    <string name="opt_restore_old_confirm_message">Current data will be removed and restored from the old version of the application.</string>
    <string name="opt_restore_old_confirm_ok">Restore now</string>
    <string name="opt_restore_old_wait">Restore data from old app file&#8230;</string>
    <string name="opt_clear_data_title">Remove all data</string>
    <string name="opt_clear_data_confirm_title">Remove all data?</string>
    <string name="opt_clear_data_confirm_message">Current data will be removed. It\'s recommended backing up data before proceed.</string>
    <string name="opt_clear_data_confirm_ok">Remove all</string>
    <string name="opt_clear_data_done">Data removed</string>
    <string name="opt_clear_data_wait">Removing data&#8230;</string>
    <string name="dialog_backup_wait_title">Please wait</string>
    <string name="title_page_comics">COMICS</string>
    <string name="title_page_releases">RELEASES</string>
    <string name="title_page_calendar">CALENDAR</string>
    <string name="title_page_shopping">SHOPPING</string>
    <string name="title_page_wishlist">WISHLIST</string>
    <string name="title_release_group_lost">Lost</string>
    <string name="title_release_group_wishlist">Wishlist</string>
    <string name="title_release_group_current_week">This week</string>
    <string name="title_release_group_current_month">This month</string>
    <string name="title_release_group_next_week">Next week</string>
    <string name="title_release_group_next_month">Next month</string>
    <string name="title_release_group_future">In the future</string>
    <string name="title_release_group_expired">Expired</string>
    <string name="title_release_group_to_purchase">To purchase</string>
    <string name="title_release_group_purchased">Purchased</string>
    <string name="title_release_group_unknown">Unknown %1s</string>
    <string name="periodicity_unknown">Nothing</string>
    <string name="periodicity_weekly">Weekly</string>
    <string name="periodicity_weekly_2">Fortnightly</string>
    <string name="periodicity_monthly">Monthly</string>
    <string name="periodicity_every_2_months">Every 2 months</string>
    <string name="periodicity_every_3_months">Every 3 months</string>
    <string name="periodicity_every_4_months">Every 4 months</string>
    <string name="periodicity_every_6_months">Every 6 months</string>
    <string name="periodicity_every_year">Every year</string>
    <string-array name="periodicity_value_array">
        <item>@string/periodicity_unknown</item>
        <item>@string/periodicity_weekly</item>
        <item>@string/periodicity_weekly_2</item>
        <item>@string/periodicity_monthly</item>
        <item>@string/periodicity_every_2_months</item>
        <item>@string/periodicity_every_3_months</item>
        <item>@string/periodicity_every_4_months</item>
        <item>@string/periodicity_every_6_months</item>
        <item>@string/periodicity_every_year</item>
    </string-array>
    <string name="editor_comics_name">Name</string>
    <string name="editor_comics_name_empty">The name is required</string>
    <string name="editor_comics_name_duplicate">The name is already being used</string>
    <string name="editor_comics_publisher">Publisher</string>
    <string name="editor_comics_series">Series</string>
    <string name="editor_comics_authors">Authors</string>
    <string name="editor_comics_price">Price</string>
    <string name="editor_comics_periodicity">Periodicity</string>
    <string name="editor_comics_reserved">Reserved</string>
    <string name="editor_comics_notes">Notes</string>
    <string name="editor_release_number">Number or intervals of numbers (eg: 1,4&#8211;6)</string>
    <string name="editor_release_number_empty">The number is required</string>
    <string name="editor_release_number_pattern_error">The value is not valid</string>
    <string name="editor_release_date">Date</string>
    <string name="editor_release_price">Price</string>
    <string name="editor_release_notes">Notes</string>
    <string name="editor_release_purchased">Purchased</string>
    <string name="editor_release_ordered">Ordered</string>
    <string name="comics_detail_image_change">Change image</string>
    <string name="comics_detail_image_remove">Remove image</string>
    <string-array name="comics_detail_image_choose">
        <item>@string/comics_detail_image_change</item>
        <item>@string/comics_detail_image_remove</item>
    </string-array>
    <string name="comics_detail_choose_image">Choose Image</string>
    <string name="notification_release_title_single">1 new comic release</string>
    <string name="notification_release_title_more">%1d new comic releases</string>
    <string name="notification_release_today">Today</string>
    <string name="notification_release_tomorrow">Tomorrow</string>
    <string name="notification_release_next_days">%1$tA, %1$tB %1$te</string>
    <string name="info_version">Version: %1$s (%2$s)</string>
    <string name="info_author">Author: %1$s</string>
    <string name="syncscanner_permissions_explanation">You won\'t be able to scan sync code without giving access to your device\'s camera. Do you want to change your settings?</string>
    <string name="syncscanner_permissions_need_title">Need access to camera</string>
    <string name="syncscanner_permissions_need_message">You can always change your permissions by going to Settings / Apps / Comikku / Persmissions</string>
    <string name="syncscanner_help">Go to www.amonshore.it/comikku on your computer and scan the QR Code</string>
    <string name="syncscanner_notvalidcode">Can not scan the code. Be sure to be on www.amonshore.it/comikku and scan it again.</string>
</resources>