<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_releases_mode_shopping"
        android:title="@string/action_release_shopping"
        android:icon="@drawable/ic_cart_outline"
        android:orderInCategory="10" app:showAsAction="ifRoom" />

    <item android:id="@+id/action_releases_mode_calendar"
        android:title="@string/action_release_calendar"
        android:icon="@drawable/ic_calendar"
        android:orderInCategory="20" app:showAsAction="ifRoom" />

    <item android:id="@+id/action_releases_mode_law"
        android:title="@string/action_release_wishlist"
        android:icon="@drawable/ic_cash_multiple"
        android:orderInCategory="30" app:showAsAction="ifRoom" />

</menu>