<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="it.amonshore.secondapp.ui.release.ReleaseEditorActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.marvinlabs.widget.floatinglabel.edittext.FloatingLabelEditText
                    android:id="@+id/txt_editor_release_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_marginBottom="10dp"
                    app:flw_labelText="@string/editor_release_number" />

                <com.marvinlabs.widget.floatinglabel.instantpicker.FloatingLabelDatePicker
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_editor_release_date"
                    android:inputType="date"
                    android:layout_marginBottom="10dp"
                    app:flw_labelText="@string/editor_release_date" />

                <com.marvinlabs.widget.floatinglabel.edittext.FloatingLabelEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_editor_release_price"
                    android:inputType="numberDecimal"
                    android:layout_marginBottom="10dp"
                    app:flw_labelText="@string/editor_release_price" />

                <com.marvinlabs.widget.floatinglabel.edittext.FloatingLabelEditText
                    android:id="@+id/txt_editor_release_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textNoSuggestions|textCapSentences|textMultiLine"
                    android:layout_marginBottom="10dp"
                    app:flw_labelText="@string/editor_release_notes" />

            </LinearLayout>
    </ScrollView>

</LinearLayout>
