<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="it.amonshore.secondapp.ui.comics.ComicsEditorActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/holo_blue_light"
                    android:text="@string/editor_comics_name"
                    android:id="@+id/lbl_editor_comics_name" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_editor_comics_name"
                    android:inputType="text|textNoSuggestions|textCapSentences"
                    android:layout_marginBottom="10dp">
                    <requestFocus/>
                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/holo_blue_light"
                    android:text="@string/editor_comics_publisher"
                    android:id="@+id/lbl_editor_comics_publisher" />

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_editor_comics_publisher"
                    android:inputType="text|textCapSentences"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/holo_blue_light"
                    android:text="@string/editor_comics_series"
                    android:id="@+id/lbl_editor_comics_series" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_editor_comics_series"
                    android:inputType="text|textCapSentences"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/holo_blue_light"
                    android:text="@string/editor_comics_authors"
                    android:id="@+id/lbl_editor_comics_authors" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_editor_comics_authors"
                    android:inputType="text|textNoSuggestions|textCapSentences"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/holo_blue_light"
                    android:text="@string/editor_comics_price"
                    android:id="@+id/lbl_editor_comics_price" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_editor_comics_price"
                    android:inputType="numberDecimal"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/holo_blue_light"
                    android:text="@string/editor_comics_periodicity"
                    android:id="@+id/lbl_editor_comics_periodicity"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_editor_comics_periodicity" />
            </LinearLayout>
    </ScrollView>

</LinearLayout>
